--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandera = "^0.17.2"
 dacite = "^1.8.1"
 article-rec-db = "0.0.8"
 pydantic = "^2.5.2"
+aiohttp = "^3.9.1"
+nh3 = "^0.2.14"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
