--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+aiohttp==3.9.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+aiosignal==1.3.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 annotated-types==0.6.0 ; python_version >= "3.11.dev0" and python_version < "3.12"
 article-rec-db==0.0.8 ; python_version >= "3.11.dev0" and python_version < "3.12"
+attrs==23.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 colorama==0.4.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
 dacite==1.8.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 db-dtypes==1.1.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+frozenlist==1.4.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-api-core==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-api-core[grpc]==2.14.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 google-auth==2.24.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
@@ -19,8 +23,10 @@ grpcio-status==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0
 grpcio==1.59.3 ; python_version >= "3.11" and python_version < "3.12.dev0"
 idna==3.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 loguru==0.7.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+multidict==6.0.4 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 multimethod==1.10 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 mypy-extensions==1.0.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+nh3==0.2.14 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 numpy==1.26.2 ; python_version >= "3.11.dev0" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 pandas==2.1.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
@@ -48,3 +54,4 @@ tzdata==2023.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 urllib3==2.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 win32-setctime==1.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
 wrapt==1.16.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+yarl==1.9.3 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
