--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pandas-stubs = "^2.1.1.230928"
 pandera = {extras = ["mypy"], version = "^0.17.2"}
 pydantic = {extras = ["mypy"], version = "^2.5.2"}
 types-psycopg2 = "^2.9.21.20"
-poethepoet = "^0.24.4"
+docker = "^7.0.0"
 
 [tool.mypy]
 # documentation reference: https://mypy.readthedocs.io/en/stable/config_file.html
@@ -67,17 +67,3 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
-
-[tool.poe.tasks.start-local-bigquery]
-help = "Start a local BigQuery emulator in the background"
-# Make sure to pull the correct image version first
-shell = """
-  docker run -d --rm --name bigquery ghcr.io/goccy/bigquery-emulator:0.4.4 \
-    --project=test \
-    --dataset=analytics_123456789 \
-    --data-from-yaml=./tests/data/bigquery.yaml
-"""
-
-[tool.poe.tasks.stop-local-bigquery]
-help = "Stop the local BigQuery emulator"
-shell = "docker stop bigquery"
