--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ nh3 = "^0.2.14"
 tenacity = "^8.2.3"
 sqlalchemy = "^2.0.23"
 psycopg2 = "^2.9.9"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.1"
