--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ attrs==23.1.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 cachetools==5.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 certifi==2023.11.17 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 charset-normalizer==3.3.2 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
-colorama==0.4.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and sys_platform == "win32"
+click==8.1.7 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
+colorama==0.4.6 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0" and (sys_platform == "win32" or platform_system == "Windows")
 dacite==1.8.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 db-dtypes==1.2.0 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
 frozenlist==1.4.1 ; python_version >= "3.11.dev0" and python_version < "3.12.dev0"
