--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -22,6 +22,18 @@ components:
       params:
         env_db_url: POSTGRES_DB_URL # Environment variable name containing the database URL
         force_update_despite_latest: false # If true, update pages even if they are already up to date (useful for backfilling post-DB changes)
+  traffic_based_article_recommenders:
+    - type: popularity
+      params:
+        env_db_url: POSTGRES_DB_URL
+        max_recommendations: 20
+        allowed_languages:  # Optional, else only includes en (English). List of languges from which to filter recommendations. Articles not in these languages will be excluded from recommendations. Refer to the Language enum in article_rec_db.models for possible language-code values.
+          - en
+          - es
+  recommendation_writers:
+    - type: postgres_base
+      params:
+        env_db_url: POSTGRES_DB_URL
 
 tasks:
   - type: update_pages
@@ -31,5 +43,13 @@ tasks:
       page_writer: postgres_base
     params:
       date_end: 2023-12-07 # Optional, else use today. YYYY-MM-DD, inclusive
-      days_to_fetch: 7 # How many days to fetch in total. Count from date_end backwards
-      days_to_fetch_per_batch: 2
+      days_to_fetch_events: 7 # How many days to fetch in total. Count from date_end backwards
+      days_to_fetch_events_per_batch: 2
+  - type: create_traffic_based_recommendations
+    components:
+      event_fetcher: ga4_base
+      recommender: popularity
+      recommendation_writer: postgres_base
+    params:
+      date_end: 2023-12-07 # Optional, else use today. YYYY-MM-DD, inclusive
+      days_to_fetch_events: 7 # How many days to fetch events (as input to create recommendations) in total. Count from date_end backwards
